--- a/.gitattributes
+++ b/.gitattributes
@@ -68,3 +68,4 @@ OnlinePlatform/wwwroot/js/three.min.js linguist-vendored=true
 OnlinePlatform/wwwroot/js/three.module.js linguist-vendored=true
 OnlinePlatform/wwwroot/js/OrbitControls.js linguist-vendored=true
 OnlinePlatform/wwwroot/js/require.js linguist-vendored=true
+OnlinePlatform/wwwroot/js/typings/* linguist-vendored=true
